--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.2.6.RELEASE</version>
     </parent>
 
     <properties>
@@ -36,9 +36,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <!--<configuration>-->
-                    <!--<mainClass>MeteoHistoryApplication</mainClass>-->
-                <!--</configuration>-->
             </plugin>
             <plugin>
                 <groupId>com.heroku.sdk</groupId>
@@ -48,7 +45,9 @@
                     <appName>meteo-history</appName>
                     <!-- Heroku app startup command -->
                     <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* configuration.MeteoHistoryApplication</web>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/*
+                            org.kbannach.MeteoHistoryApplication
+                        </web>
                     </processTypes>
                 </configuration>
             </plugin>
