--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,17 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!--TODO liquibase?-->
+        <!-- TODO
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.12</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.8.9</version>
+        </dependency>
 
         <!-- SELENIUM DEPENDENCIES -->
         <dependency>
