--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.liquibase.change-log=classpath:/db/changelog/db-changelog.xml
+spring.jpa.hibernate.ddl-auto=validate
 # jobs
 # every 4 hours starting at 00:10
 app.scrapping-cron=0 10 0/4 * * ? *
