--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!-- TODO
+        <!-- TODO dockerfile with database image
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
