use headless Selenium driver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.liquibase.change-log=classpath:/db/changelog/db-changelog.xml
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
 # jobs
 # every 4 hours starting at 00:10
 app.scrapping-cron=0 10 0/4 * * ? *
